--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -5,11 +5,161 @@ $desc: 1200
 $tab: 1024
 $mob: 768
 
+@keyframes move-twink-back
+	from
+		background-position: 0 0
+	to
+		background-position: -10000px 5000px
+
+
+@keyframes move-clouds-back
+	from
+		background-position: 0 0
+	to
+		background-position: 10000px 0
+@keyframes move-logo-planet
+	from
+		transform: rotate(0deg)
+	to
+		transform: rotate(360deg)
+.logo
+	position: absolute
+	right: 5%
+	top: 5%
+	&__sun
+		+s(sun)
+
+	&__planet
+		border-radius: 50%
+		position: absolute
+		top: 50%
+		left: 50%
+		animation: move-logo-planet infinite linear
+		//border: 1px solid lightblue
+
+		&:after
+			display: block
+			content: ''
+			position: absolute
+
+		&_mercury
+			width: 40px
+			height: 40px
+			margin-left: -20px
+			margin-top: -20px
+			animation-duration: 4s
+			&:after
+				+s(mercury)
+				left: 20%
+				top: 0
+		&_venus
+			width: 60px
+			height: 60px
+			margin-left: -30px
+			margin-top: -30px
+			animation-duration: 5s
+
+			&:after
+				right: 10%
+				top: 0
+				+s(venus)
+
+		&_earth
+			width: 80px
+			height: 80px
+			margin-left: -40px
+			margin-top: -40px
+			animation-duration: 6s
+
+			&:after
+				+s(earth)
+				left: 10%
+				bottom: 0
+		&_mars
+			animation-duration: 7s
+
+			width: 100px
+			height: 100px
+			margin-left: -50px
+			margin-top: -50px
+			&:after
+				right: 7%
+				bottom: 0
+				+s(mars)
+
+.content
+	position: absolute
+	top: 15%
+	left: 5%
+	margin-right: 5%
+	+clr
+	&__intro
+		padding: 10px
+		border: 4px double lightcoral
+
+		p
+			color: white
+			font-size: 18px
+			text-shadow: 1px 1px 1px black
+	&__box
+		margin-top: 3%
+	&__text
+		strong
+			display: block
+			font-size: 30px
+		p
+			color: white
+			font-size: 15px
+			margin: 10px 0
+	&__main-img
+		float: left
+		margin-right: 2%
+
+.stars, .twinkling, .clouds
+	position: absolute
+	top: 0
+	left: 0
+	right: 0
+	bottom: 0
+	width: 100%
+	height: 100%
+	display: block
+
+
+.stars
+	background: #000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center
+	z-index: 0
+
+
+.twinkling
+	background: transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center
+	z-index: 1
+	animation: move-twink-back 200s linear infinite
+
+
+.clouds
+	background: transparent url(http://www.script-tutorials.com/demos/360/images/clouds3.png) repeat top center
+	z-index: 3
+	animation: move-clouds-back 200s linear infinite
+.nav
+	position: absolute
+	left: 5%
+	top: 5%
+	li
+		display: inline-block
+		margin: 0 10px
+	a
+		text-decoration: none
+		color: white
+		font-weight: bold
+		text-transform: uppercase
+		font-size: 20px
 
 
 html, body
 	width: 100%
 	height: 100%
+	min-width: 1200px
 #slides-container
 	@extend html
 	overflow: hidden
@@ -33,6 +183,10 @@ html, body
 		right: 5%
 		text-align: right
 		color: white
+	&__box
+		position: relative
+		z-index: 100
+		height: 100%
 #slide-1
 	background: red
 #slide-2
