--- a/src/sass/lib/_sprite.sass
+++ b/src/sass/lib/_sprite.sass
@@ -1,6 +1,9 @@
 $icons: (0:0)
-$icons: map-merge($icons,(flag: (X: 0px, Y:0px, W: 150px, H: 124px, TW: 150px, TH: 261px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(top_links: (X: 0px, Y:-128px, W: 116px, H: 133px, TW: 150px, TH: 261px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(earth: (X: 0px, Y:-32px, W: 13px, H: 13px, TW: 47px, TH: 45px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(mars: (X: -32px, Y:0px, W: 15px, H: 15px, TW: 47px, TH: 45px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(mercury: (X: -34px, Y:-32px, W: 10px, H: 10px, TW: 47px, TH: 45px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(sun: (X: 0px, Y:0px, W: 28px, H: 28px, TW: 47px, TH: 45px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(venus: (X: -17px, Y:-32px, W: 13px, H: 13px, TW: 47px, TH: 45px, IMG: '../img/icons.png')))
 
 
 // Gets an attribute from the sass map
@@ -37,15 +40,33 @@ $icons: map-merge($icons,(top_links: (X: 0px, Y:-128px, W: 116px, H: 133px, TW: 
 	+sprite-retina($i)	
 
 //
-//.icon-flag
-//	width: 150px
-//	height: 124px
+//.icon-earth
+//	width: 13px
+//	height: 13px
+//	background-image: url('../img/icons.png')
+//	background-position: 0px -32px
+//
+//.icon-mars
+//	width: 15px
+//	height: 15px
+//	background-image: url('../img/icons.png')
+//	background-position: -32px 0px
+//
+//.icon-mercury
+//	width: 10px
+//	height: 10px
+//	background-image: url('../img/icons.png')
+//	background-position: -34px -32px
+//
+//.icon-sun
+//	width: 28px
+//	height: 28px
 //	background-image: url('../img/icons.png')
 //	background-position: 0px 0px
 //
-//.icon-top_links
-//	width: 116px
-//	height: 133px
+//.icon-venus
+//	width: 13px
+//	height: 13px
 //	background-image: url('../img/icons.png')
-//	background-position: 0px -128px
+//	background-position: -17px -32px
 //
