--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -21,16 +21,17 @@ block content
 
 				)
 				#slide-1.slide
+
 					.stars
 					.twinkling
-					.slide__box
+					.slide__box(data-tilt)
 						+logo
 						+menu
 						.content
 							.content__intro
 								p Hello! My name is Anton and I`m frontend developer. Here I want to represent my pet-project called Four-4. It`s mini website, which is dedicated to the first 4 planets of Solar system. This site is the platform for testing very interesting javascript-scroll library ScrollR. Also I used here few css-animations and tested my design skills =P Hope you enjoy it. Have fun!
 							.content__box
-								img.content__main-img(src="img/mercury.png" alt="")
+								img.content__main-img(src="img/mercury.png" alt="" )
 								.content__text
 									strong(style="color: sandybrown") Mercury
 									p Mercury is the smallest and innermost planet in the Solar System. Its orbital period around the Sun of 88 days is the shortest of all the planets in the Solar System. It is named after the Roman deity Mercury, the messenger to the gods.
