--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -93,6 +93,7 @@ $mob: 768
 	left: 5%
 	margin-right: 5%
 	+clr
+	transform: translateZ(20px)
 	&__intro
 		padding: 10px
 		border: 4px double lightcoral
@@ -114,6 +115,7 @@ $mob: 768
 	&__main-img
 		float: left
 		margin-right: 2%
+		transform: translateZ(20px)
 
 .stars, .twinkling, .clouds
 	position: absolute
@@ -187,6 +189,7 @@ html, body
 		position: relative
 		z-index: 100
 		height: 100%
+		transform-style: preserve-3d
 #slide-1
 	background: red
 #slide-2
